--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "clean": "rm -rf lib/",
     "build": "babel src --out-dir lib",
-    "prepublish": "yarn run clean && yarn run build"
+    "prepare": "yarn run clean && yarn run build"
   },
   "repository": {
     "type": "git",
